<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">收银台</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>

    <string name="storeid_">StoreId：</string>
    <string name="_03322111001200200000024">03322111001200200000024</string>
    <string name="appid_">AppId：</string>
    <string name="_1001200200000024">1001200200000024</string>
    <string name="appkey_">AppKey：</string>
    <string name="dc1277093df84ff23b885cc776deca13">dc1277093df84ff23b885cc776deca13</string>
    <string name="_orderid">订单号</string>
    <string name="input_orderid">默认为当前时间戳</string>
    <string name="amount">交易金额</string>
    <string name="input_amount">请输入交易金额(单位:分)</string>
    <string name="subject">商品名称</string>
    <string name="input_subject">喔噻体验商品</string>
    <string name="currtype">货币类型</string>
    <string name="operator">操作员</string>
    <string name="input_operator">请输入操作员</string>
    <string name="remark">交易描述</string>
    <string name="input_remark">请输入交易描述</string>
    <string name="setting">设置</string>
    <string name="scan_text">scan_text</string>

</resources>